--- a/app/src/main/res/layout/list_item_earthquakes.xml
+++ b/app/src/main/res/layout/list_item_earthquakes.xml
@@ -2,10 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="12dp"
+    android:layout_margin="8dp"
     android:orientation="horizontal"
     android:weightSum="3"
-    android:background="#c1c1c1">
+    android:background="@drawable/ly"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp">
 
     <LinearLayout
         android:layout_width="0dp"
@@ -33,7 +35,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/country"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="6dp"
@@ -61,14 +63,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="6dp"
-            android:text="time" />
+            android:text="time"
+            android:gravity="center"/>
 
         <TextView
             android:id="@+id/date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="6dp"
-            android:text="date" />
+            android:text="date"
+            android:gravity="center"/>
 
     </LinearLayout>
 
